<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/search_entires_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/searchToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_subtitle"
                android:text="@string/latitude" />

            <EditText
                android:id="@+id/lat_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lat_hint"
                android:inputType="numberSigned|numberDecimal"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="160dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="@dimen/text_subtitle"
                android:text="@string/longitude" />

            <EditText
                android:id="@+id/lon_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lng_hint"
                android:inputType="numberSigned|numberDecimal"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="304dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/radius_label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/radius_label"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_subtitle" />

            <EditText
                android:id="@+id/radius_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/radius_hint"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/type_label"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_subtitle" />

            <EditText
                android:id="@+id/type_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type_hint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/keyword_label"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_subtitle" />

            <EditText
                android:id="@+id/keyword_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/keyword_hint"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search_white"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_entires_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/colorPrimaryDark" />


</androidx.constraintlayout.widget.ConstraintLayout>